--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,15 +6,33 @@
 }
 
 body {
-    font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .weather {
-    height: 800px;
+    height: 900px;
     background: url(/img/photo.jpg);
+    &__heading {
+        @media screen and(min-width: 768px) {
+            font-size: 3.5rem;
+        }
+    }
     &__info {
-        height: 500px;
+        height: 600px;
         opacity: 0.9;
+    }
+}
+
+.location {
+    font-size: 1.5rem;
+    font-weight: bold;
+    @media screen and(min-width: 768px) {
+        font-size: 2rem;
+    }
+}
+
+p {
+    @media screen and(min-width: 768px) {
+        font-size: 1.5rem;
     }
 }
