--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,7 +11,7 @@ body {
 
 .weather {
     height: 900px;
-    background: url(/img/photo.jpg);
+    background: url(/img/summer.jpg);
     &__heading {
         @media screen and(min-width: 768px) {
             font-size: 3.5rem;
