--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,21 +17,25 @@ span {
 
 .weather {
     height: 790px;
+    &__info {
+        height: 560px;
+        opacity: 0.8;
+    }
     &__heading {
         @media screen and(min-width: 768px) {
             font-size: 3.5rem;
         }
     }
-    &__info {
-        height: 560px;
-        opacity: 0.8;
+    &__location {
+        font-size: 1.5rem;
+        font-weight: bold;
+        cursor: pointer;
+        @media screen and(min-width: 768px) {
+            font-size: 2rem;
+        }
     }
 }
 
-.location {
-    font-size: 1.5rem;
-    font-weight: bold;
-    @media screen and(min-width: 768px) {
-        font-size: 2rem;
-    }
+.active {
+    font-size: 2rem;
 }
