--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
+    min-height: 100%;
 }
 
 span {
@@ -16,9 +17,7 @@ span {
 }
 
 .weather {
-    height: 790px;
     &__info {
-        height: 630px;
         opacity: 0.8;
     }
     &__heading {
