--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -40,3 +40,9 @@ span {
 .active {
     font-size: 2rem;
 }
+
+.alert-message {
+    background-color: rgb(248, 118, 118);
+    line-height: 1.5;
+    padding: 8px 0;
+}
