--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,9 +5,10 @@
     padding: 0;
 }
 
+html,
 body {
     font-family: 'Open Sans', sans-serif;
-    min-height: 100%;
+    height: 100%;
 }
 
 span {
