--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,4 @@
+$colorAlertMessage:rgb(248, 118, 118);
 * {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -39,11 +40,11 @@ span {
 }
 
 .active {
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
 
 .alert-message {
-    background-color: rgb(248, 118, 118);
+    background-color: $colorAlertMessage;
     line-height: 1.5;
     padding: 8px 0;
 }
