--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,8 +8,11 @@ $colorAlertMessage:rgb(248, 118, 118);
 
 html,
 body {
-    font-family: 'Open Sans', sans-serif;
     height: 100%;
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
 }
 
 span {
