--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -51,3 +51,11 @@ span {
     line-height: 1.5;
     padding: 8px 0;
 }
+
+.pac-container {
+    font-family: 'Open Sans', sans-serif;
+}
+
+.pac-item {
+    line-height: 22px;
+}
