--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,6 @@
 $colorAlertMessage:rgb(248, 118, 118);
+$fontFamily:'Open Sans',
+sans-serif;
 * {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -12,7 +14,7 @@ body {
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: $fontFamily;
 }
 
 span {
@@ -53,7 +55,7 @@ span {
 }
 
 .pac-container {
-    font-family: 'Open Sans', sans-serif;
+    font-family: $fontFamily;
 }
 
 .pac-item {
